--- a/wzw/app/build.gradle
+++ b/wzw/app/build.gradle
@@ -17,6 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main{
+            jniLibs.srcDirs=['libs']
+        }
+    }
+
+
 }
 
 dependencies {
