--- a/homework/wzwLab/app/src/main/AndroidManifest.xml
+++ b/homework/wzwLab/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".ShowloginActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".ShowloginActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
